--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,4 +14,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build and upload
-      uses: gonuit/hero
+      uses: gonuit/heroku-docker-deploy@v1.3.3
+      with:
+        email: ${{ secrets.EMAIL }}
+        heroku_api_key: ${{ secrets.API_KEY}}
+        heroku_api_name: ${{ secretes.APP_NAME}}
+        dockerfile_directory: ./
+        dockerfile_name: Dockerfile
+        
